feat: mobile keyboard & more

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,46 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Felix Alejandro Tonatiuh Gomez Briones" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="In permanent beta: learning, improving, seeking ..."
     />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://tonatiuhgomez.com/" />
+    <meta
+      property="og:title"
+      content="Felix Alejandro Tonatiuh Gomez Briones"
+    />
+    <meta
+      property="og:description"
+      content="In permanent beta: learning, improving, seeking ..."
+    />
+    <meta property="og:image" content="" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://tonatiuhgomez.com/" />
+    <meta
+      property="twitter:title"
+      content="Felix Alejandro Tonatiuh Gomez Briones"
+    />
+    <meta
+      property="twitter:description"
+      content="In permanent beta: learning, improving, seeking ..."
+    />
+    <meta property="twitter:image" content="" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
